admission/ValidatingAdmissionPolicy/policies/readinessprobe-httpget-host/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readinessprobe-httpget-host-initcontainers
  annotations:
    kubeapt.io/uuid: "5dd76a70-9308-4635-94d2-d68e75ba1e24"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
